tests/paczka1/fuzzy1/38384431.err
Error in line 1: ivm86xy A"65 49,9
Error in line 11: Mq2Nx5Xm A365 61,5
Error in line 25: A850 A365 14,6
Error in line 39: I4ZiX9zNxd A850 86,6
